--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello... <i>World</i>
+---
+  title: Home
+  layout: default
+---
+
+<ul>
+  {% for post in site.posts %}
+    <li><a href="{{ post.url}}">{{ post.title }} </a></li>
+  {% endfor %}
+</ul>
+  
