ellipsis, for the picky

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   layout: default
 ---
 
-<div class="wip"><span class="at">@</span>wip...</div>
+<div class="wip"><span class="at">@</span>wip&hellip;</div>
 
 <ul>
   {% for post in site.posts %}                                                          
