make my name not a link

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 <div id="projects">
   <div id="groupon">
-    <div class="caption">During the day I work at <br /><span class="company">Groupon</span></div>
+    <div class="caption">During the day I work at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
     <a href="http://groupon.com"><div class="graphic"></div></a>
   </div>
   <div id="mergefm">
-    <div class="caption">And at night I work on <br /><span class="company">merge.fm</span></div>
+    <div class="caption">And at night I work on <br /><a href="http://merge.fm"><span class="company">merge.fm</span></a></div>
     <a href="http://merge.fm"><div class="graphic"></div></a>
   </div>
 </div>
