moved social links to the bottom

--- a/index.html
+++ b/index.html
@@ -13,3 +13,7 @@
     <a href="http://merge.fm"><div class="graphic"></div></a>
   </div>
 </div>
+<div id="follow_me">
+  <p>You should follow me on twitter <a href="http://twitter.com/choxi">here</a></p>
+  <p>or on Github <a href="http://github.com/choxi">here</a></p>
+</div>
