--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   layout: default
 ---
 
+<div id="sxsw">
+  <hr>
+  <p>Check out what I'm working on for the <a href="http://startupbus.com">SXSW StartupBus</a>:</p>
+  <p class="pretty"><a href="http://getshotput.com">Get Shotput</a>
+  <hr>
+</div>
+
 <div id="projects">
   <div id="groupon">
     <div class="caption">During the day I work at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
@@ -15,5 +22,6 @@
 </div>
 <div id="follow_me">
   <p>You should follow me on twitter <a href="http://twitter.com/choxi">here</a></p>
-  <p>or on Github <a href="http://github.com/choxi">here</a></p>
+  <p>or on github <a href="http://github.com/choxi">here</a></p>
 </div>
+
