--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
   layout: default
 ---
 
-<div id="sxsw">
-  <hr>
-  <p>Check out what I'm working on for the <a href="http://startupbus.com">SXSW StartupBus</a>:</p>
-  <p class="pretty"><a href="http://getshotput.com">Get Shotput</a>
-  <hr>
-</div>
-
-<div id="projects">
-  <div id="groupon">
-    <div class="caption">During the day I work at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
-    <a href="http://groupon.com"><div class="graphic"></div></a>
-  </div>
-  <div id="mergefm">
-    <div class="caption">And at night I work on <br /><a href="http://merge.fm"><span class="company">merge.fm</span></a></div>
-    <a href="http://merge.fm"><div class="graphic"></div></a>
-  </div>
-</div>
 <div id="follow_me">
   <p>You should follow me on twitter <a href="http://twitter.com/choxi">here</a></p>
   <p>or on github <a href="http://github.com/choxi">here</a></p>
+</div>
+<div id="projects">
+  <div id="groupon" class="project">
+    <div class="caption">During the day I work at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
+    <a href="http://groupon.com"><div class="graphic"></div></a>
+  </div>
+  <div id="shotput" class="project">
+    <div class="caption">I started this at SXSW on the StartupBus<br /><a href="http://getshotput.com"><span class="company">Shotput</span></a></div>
+    <a href="http://getshotput.com"><div class="graphic"></div></a>
+  </div>
+  <div id="bloc" class="project">
+    <div class="caption">This is another one of my side projects<br /><a href="http://getbloc.com"><span class="company">Bloc</span></a></div>
+    <a href="http://getbloc.com"><div class="graphic"></div></a>
+  </div>
+  <div id="mergefm" class="project">
+    <div class="caption">In college I worked at<br /><a href="http://merge.fm"><span class="company">merge.fm</span></a></div>
+    <a href="http://merge.fm"><div class="graphic"></div></a>
+  </div>
 </div>
 
