--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </div>
 <div id="projects">
   <div id="groupon" class="project">
-    <div class="caption">During the day I work at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
+    <div class="caption">I previously worked at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
     <a href="http://groupon.com"><div class="graphic"></div></a>
+  </div>
+  <div id="mergefm" class="project">
+    <div class="caption">In college I worked at<br /><a href="http://merge.fm"><span class="company">merge.fm</span></a></div>
+    <a href="http://merge.fm"><div class="graphic"></div></a>
   </div>
   <div id="shotput" class="project">
     <div class="caption">I started this at SXSW on the StartupBus<br /><a href="http://getshotput.com"><span class="company">Shotput</span></a></div>
@@ -19,10 +23,6 @@
   <div id="bloc" class="project">
     <div class="caption">This is another one of my side projects<br /><a href="http://getbloc.com"><span class="company">Bloc</span></a></div>
     <a href="http://getbloc.com"><div class="graphic"></div></a>
-  </div>
-  <div id="mergefm" class="project">
-    <div class="caption">In college I worked at<br /><a href="http://merge.fm"><span class="company">merge.fm</span></a></div>
-    <a href="http://merge.fm"><div class="graphic"></div></a>
   </div>
 </div>
 
