--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <p>or on github <a href="http://github.com/choxi">here</a></p>
 </div>
 <div id="projects">
+  <div id="niroka" class="project">
+    <div class="caption">I'm currently a cofounder at <br /><a href="http://niroka.com"><span class="company">Niroka</span></a></div>
+    <a href="http://niroka.com"><div class="graphic"></div></a>
+  </div>
   <div id="groupon" class="project">
     <div class="caption">I previously worked at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
     <a href="http://groupon.com"><div class="graphic"></div></a>
