--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <p>You should follow me on twitter <a href="http://twitter.com/choxi">here</a></p>
   <p>or on github <a href="http://github.com/choxi">here</a></p>
 </div>
+<div id="blog_posts">
+  <p>my blog posts</p>
+  <ul>
+    <li><a href="http://blog.niroka.com/post/12253356252/the-hustlers-manifesto">The Hustler's Manifesto</a></li>
+  </ul>
+</div>
 <div id="projects">
   <div id="niroka" class="project">
     <div class="caption">I'm currently a cofounder at <br /><a href="http://niroka.com"><span class="company">Niroka</span></a></div>
