--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
   layout: default
 ---
 
+<div id="name"> <h1>Roshan Choxi</h1> </div>
 <div id="follow_me">
   <p>You should follow me on twitter <a href="http://twitter.com/choxi">here</a></p>
   <p>or on github <a href="http://github.com/choxi">here</a></p>
-</div>
-<div id="blog_posts">
-  <p>my blog posts</p>
-  <ul>
-    <li><a href="http://blog.niroka.com/post/12253356252/the-hustlers-manifesto">The Hustler's Manifesto</a></li>
-  </ul>
 </div>
 <div id="projects">
   <div id="niroka" class="project">
