--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   layout: default
 ---
 
+<div class="navigation">
+  <a href="/blog.html"><img src="/images/blog_large.png"></a>
+  <p> Blog <p>
+</div>
+<div class="navigation">
+  <a href="http://github.com/choxi"><img src="/images/github_large.png"></a>
+  <p> Github <p>
+</div>
+<div class="navigation last">
+  <a href="http://twitter.com/choxi"><img src="/images/twitter_large.png"></a>
+  <p> Twitter <p>
+</div>
+<div class="clear"></div>
 <div id="projects">
   <div id="niroka" class="project">
     <div class="caption">I'm currently a cofounder at <br /><a href="http://niroka.com"><span class="company">Niroka</span></a></div>
