--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   layout: default
 ---
 
-<div class="navigation">
-  <a href="/blog.html"><img src="/images/blog_large.png"></a>
-  <p> Blog <p>
-</div>
-<div class="navigation">
-  <a href="http://github.com/choxi"><img src="/images/github_large.png"></a>
-  <p> Github <p>
-</div>
-<div class="navigation last">
-  <a href="http://twitter.com/choxi"><img src="/images/twitter_large.png"></a>
-  <p> Twitter <p>
-</div>
+<a href="/blog.html">
+  <div class="navigation blog">
+    <p> Blog <p>
+  </div>
+</a>
+
+<a href="http://github.com/choxi">
+  <div class="navigation github">
+    <p> Github <p>
+  </div>
+</a>
+
+<a href="http://twitter.com/choxi">
+  <div class="navigation twitter last">
+    <p> Twitter <p>
+  </div>
+</a>
+
 <div class="clear"></div>
 <div id="projects">
   <div id="niroka" class="project">
