--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
 
 <a href="/blog.html">
   <div class="navigation blog">
-    <p> Blog <p>
+    <p> Blog </p>
   </div>
 </a>
 
 <a href="http://github.com/choxi">
   <div class="navigation github">
-    <p> Github <p>
+    <p> Github </p>
   </div>
 </a>
 
 <a href="http://twitter.com/choxi">
   <div class="navigation twitter last">
-    <p> Twitter <p>
+    <p> Twitter </p>
   </div>
 </a>
 
 <div class="clear"></div>
 <div id="projects">
-  <div id="niroka" class="project">
-    <div class="caption">I'm currently a cofounder at <br /><a href="http://niroka.com"><span class="company">Niroka</span></a></div>
-    <a href="http://niroka.com"><div class="graphic"></div></a>
+  <div id="bloc" class="project">
+    <div class="caption">I'm currently a cofounder at<br /><a href="http://www.trybloc.com"><span class="company">Bloc</span></a></div>
+    <a href="http://www.trybloc.com"><div class="graphic"></div></a>
   </div>
   <div id="groupon" class="project">
     <div class="caption">I previously worked at <br /><a href="http://groupon.com"><span class="company">Groupon</span></a></div>
@@ -38,10 +38,6 @@
   <div id="shotput" class="project">
     <div class="caption">I started this at SXSW on the StartupBus<br /><a href="http://getshotput.com"><span class="company">Shotput</span></a></div>
     <a href="http://getshotput.com"><div class="graphic"></div></a>
-  </div>
-  <div id="bloc" class="project">
-    <div class="caption">This is another one of my side projects<br /><a href="http://getbloc.com"><span class="company">Bloc</span></a></div>
-    <a href="http://getbloc.com"><div class="graphic"></div></a>
   </div>
 </div>
 
